--- a/css/gallery-extras.css
+++ b/css/gallery-extras.css
@@ -5,9 +5,10 @@
 /* Hidden until "Zu allen Werken" is clicked */
 .works--hidden {
   visibility: hidden;
-  height: 0;
-  min-height: 0;
-  padding: 0;
+  height: 0 !important;
+  min-height: 0 !important;
+  padding: 0 !important;
+  margin: 0 !important;
   overflow: hidden;
 }
 
